<resources>
    <string name="app_name">Vinkelkampen</string>
    <string name="new_round">Ny omgång</string>
    <string name="kp_styret">KP-styret</string>
    <string name="participants">Deltagare</string>
    <string name="draw_angle">Rita vinkel</string>
    <string name="start">Starta</string>
    <string name="default_angle">0,0</string>
    <string name="opposite_angle">Motsatt vinkel</string>
    <string name="random_angle">Slumpad vinkel</string>
    <string name="guess_angle">Gissa vinkel</string>
    <string name="result">Resultat</string>
    <string name="default_name">Namn</string>
    <string name="add">Lägg till</string>
    <string name="remove">Ta bort</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>
    <string name="guess">Gissning</string>
    <string name="add_guess">Gissa</string>
    <string name="diff">Diff</string>
    <string name="show_diff">Visa diff</string>
    <string name="new_angle">Ny vinkel</string>
    <string name="expert_mode">Expertläge</string>
    <string name="normal">Normal</string>
    <string name="expert">Expert</string>
</resources>
