<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/participantNameHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_name"
        android:textSize="20sp" />

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/participantGuessHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/participantScoreHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/result"
        android:textSize="20sp"
        android:layout_marginStart="32dp" />

</LinearLayout>